--- a/notebooks/weekend_split.ipynb
+++ b/notebooks/weekend_split.ipynb
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +440,27 @@
       "Row: 7000\n",
       "Row: 8000\n",
       "Row: 9000\n",
-      "Row: 10000\n"
+      "Row: 10000\n",
+      "Row: 11000\n",
+      "Row: 12000\n",
+      "Row: 13000\n",
+      "Row: 14000\n",
+      "Row: 15000\n",
+      "Row: 16000\n",
+      "Row: 17000\n",
+      "Row: 18000\n",
+      "Row: 19000\n",
+      "Row: 20000\n",
+      "Row: 21000\n",
+      "Row: 22000\n",
+      "Row: 23000\n",
+      "Row: 24000\n",
+      "Row: 25000\n",
+      "Row: 26000\n",
+      "Row: 27000\n",
+      "Row: 28000\n",
+      "Row: 29000\n",
+      "Row: 30000\n"
      ]
     }
    ],
@@ -460,20 +480,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "median_submission.to_csv(\"median.csv\", index=False)\n",
     "mean_submission.to_csv(\"average.csv\", index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
